@@ -22,7 +22,6 @@ displaymanagers:
   - gdm
   - mdm
   - lxdm
-  - kdm
   - greetd
 
 # Enable the following settings to force a desktop environment
