@@ -46,6 +46,7 @@ in the *Modules* heading, below.
 ## Modules ##
  - *bootloader* now supports more options when building the kernel
    command-line. (Thanks Evan)
+ - *displaymanager* no longer supports the discontinued *kdm* display manager.
  - *grubcfg* changed the key *keepDistributor* to *keep_distributor*.
    Please update configurations.
  - *partition* requires KPMCore 21.12 (e.g. KPMCore 4.2 API, or later).
